--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "dotnet fable       src/App --run webpack --mode production"
   },
   "dependencies": {
+    "appwrite": "^4.0.4",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
