--- a/src/App/App.fsproj
+++ b/src/App/App.fsproj
@@ -12,9 +12,10 @@
     <Compile Include="TurtleParser.fs" />
     <Compile Include="UI.fs" />
     <Compile Include="Server.fs" />
+    <Compile Include="Register.fs" />
     <Compile Include="Login.fs" />
     <Compile Include="Chat.fs" />
-    <Compile Include="Turtle.fs" />
+    <Compile Include="Editor.fs" />
     <Compile Include="Browse.fs" />
     <Compile Include="Home.fs" />
     <Compile Include="Profile.fs" />
